--- a/src/components/common/styles/footer.css
+++ b/src/components/common/styles/footer.css
@@ -10,7 +10,7 @@
 
 .footer-links,
 .footer-credits {
-	flex-basis: 50%;
+	flex-basis: 70%;
 }
 
 .footer-links {
@@ -42,7 +42,8 @@
 	justify-content: flex-end;
 	color: var(--tertiary-color);
 	font-size: 14px;
-	text-align: right;
+	/* text-align: right; */
+	text-align: center;
 }
 
 @media (max-width: 600px) {
